[package]
name = "wasmadder"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A CLI Tool for modifying WebAssembly binaries"
homepage = "https://github.com/TitusVM/wasmadder"
repository = "https://github.com/TitusVM/wasmadder"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
clap = "4.5.23"
wasm-gen = "0.1.4"
